--- a/src/styles.css
+++ b/src/styles.css
@@ -1,199 +1,180 @@
-html {
-  box-sizing: border-box;
-  overflow-x: hidden;
+:root {
+  --main-color: #2e2f42;
+  --active-color: #4d5ae5;
+  --text-color: #434455;
+  --secondary-color: #ffffff;
+  --light-color: #f4f4fd;
+  --press-color: #404bbf;
+  --icon-color: #8e8f99;
+  --transition-dur-funk: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  color: #212121;
-  background-color: #8ba0a1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.list {
+  list-style: none;
+  display: flex;
+}
+.link {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ol,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 img {
   display: block;
-  max-width: 100%;
-  object-fit: cover;
 }
 
-.search-input {
-  width: 100%;
-  height: 48px;
-  max-width: 600px;
-  background-color: #fff;
-  border-radius: 10px;
-  border: none;
-}
-
-.SearchForm-button:hover {
-  opacity: 1;
-}
-
-.search-form {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  width: 100%;
-  font: inherit;
-  font-size: 18px;
-  line-height: 18px;
-  font-style: normal;
-  border: none;
-  outline: none;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-.search-input::placeholder {
-  font: inherit;
-  font-size: 18px;
-  font-style: normal;
-  border: none;
-}
-
-.button-submit {
-  padding: 8px 16px;
-  background-color: #515f63;
-  transition: all 800ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  color: #fff;
-  border: 0;
-  text-decoration: none;
-  cursor: pointer;
-  font: inherit;
-  height: 48px;
-  font-size: 18px;
-  line-height: 20px;
-  font-style: normal;
-  font-weight: 500;
-  min-width: 180px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  border-radius: 10px;
-}
-
-.button-submit:hover,
-.button-submit:focus {
-  transition: transform 500ms;
-  background-color: #0f2024;
-}
-
-.gallery {
-  padding-bottom: 70px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  row-gap: 50px;
-  padding-left: auto;
-  padding-right: auto;
-  justify-content: space-around;
-  list-style: none;
-}
-
-.photo-card {
-  border-radius: 10px;
-  position: relative;
-  width: calc(100% / 4 - 20px * 3);
-  height: 350px;
-  flex-direction: column;
-  background-color: rgb(183, 210, 210);
-  margin-top: 50px;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-}
-
-.photo-card :hover,
-.photo-card:focus {
-  border-radius: 10px;
-  transition: transform 250ms;
-  transform: scale(1.1);
-  cursor: zoom-in;
-  background-color: #0f2024;
-}
-
-.image-info {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: center;
-  list-style: none;
-  text-decoration: none;
-}
-
-.image-src {
-  transition: transform 250ms;
-  border-radius: 10px;
-  height: 270px;
-  width: 100%;
-}
-
-.imageGalleryItem-image {
-  border-radius: 10px;
-  width: 100%;
-  object-fit: cover;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.imageGalleryItem-image:hover {
-  transform: scale(1.03);
-  cursor: zoom-in;
-}
-.info-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #7a859e;
-  font-size: 12px;
-}
-.b {
-  user-select: none;
-  text-decoration: none;
-}
-.photo-card > .image-info {
-  flex-grow: 1;
-}
-.is-hidden {
-  display: none;
-}
-
-.visible {
+.logo-header {
   display: block;
-  margin: 20px auto 20px auto;
-  font: inherit;
-}
-.load-more {
-  padding: 8px 16px;
-  background-color: #515f63;
-  transition: all 800ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  color: #fff;
-  border: 0;
-  text-decoration: none;
-  cursor: pointer;
-  font: inherit;
-  height: 48px;
-  font-size: 18px;
-  line-height: 20px;
-  font-style: normal;
-  font-weight: 500;
-  min-width: 180px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  border-radius: 10px;
 }
 
-.load-more:hover,
-.load-more:focus {
-  transition: transform 500ms;
-  background-color: #0f2024;
+body {
+  font-family: 'Poppins', sans-serif;
+  color: var(--text-color);
+  background-image: url('../src/images/background2x.jpg');
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+.page-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16),
+    0 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.page-navigation {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.menu-item {
+  display: block;
+  padding: 24px 0;
+}
+
+.addresses-nav {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1158px;
+  padding: 0 15px;
+}
+
+/* header-logo */
+.logo {
+  color: var(--active-color);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  font-weight: 800;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-right: 76px;
+}
+
+.logo-dark {
+  color: var(--main-color);
+}
+
+.logo-light {
+  color: var(--light-color);
+}
+
+.menu-item {
+  color: var(--main-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.menu-item:hover,
+.menu-item:focus {
+  color: var(--press-color);
+  transition: color var(--transition-dur-funk);
+}
+
+.addresses {
+  font-style: normal;
+}
+
+.contact {
+  display: block;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+  transition: color var(--transition-dur-funk);
+}
+
+.contact:hover,
+.contact:focus {
+  color: var(--press-color);
+}
+
+.hero-container {
+  margin-left: 100px;
+}
+
+.hero-title {
+  margin-top: 228px;
+  max-width: 555px;
+  color: #242424;
+  font-family: Poppins;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.09;
+}
+.hero-cocktails {
+  color: #7e8fdd;
+  font-size: 64px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.09;
+}
+.hero-about {
+  padding-top: 28px;
+  color: #242424;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.3;
+  max-width: 480px;
 }
