--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,7 @@ body {
 .container {
   margin: 0 auto;
   width: 1158px;
-  padding: 0 15px;
+  padding: 0 auto;
 }
 
 /* header-logo */
@@ -147,8 +147,10 @@ body {
   color: var(--press-color);
 }
 
-.hero-container {
-  margin-left: 100px;
+.hero {
+  display: flex;
+  justify-content: center;
+  gap: 58px;
 }
 
 .hero-title {
@@ -177,4 +179,13 @@ body {
   font-weight: 400;
   line-height: 1.3;
   max-width: 480px;
+}
+.hero-right {
+  margin-top: 112px;
+  background: url(./images/elements.png) 100% 100% no-repeat,
+    url(./images/Girl.png) 100% 100% no-repeat,
+    url(./images/Rectangle\ 725.png) 100% 100% no-repeat;
+  background-position: top 0 right 0, top 10px right 84px, top 99px right 84px;
+  width: 552px;
+  height: 672px;
 }
