--- a/src/styles.css
+++ b/src/styles.css
@@ -1,47 +1,8 @@
-:root {
-  --main-color: #2e2f42;
-  --active-color: #4d5ae5;
-  --text-color: #434455;
-  --secondary-color: #ffffff;
-  --light-color: #f4f4fd;
-  --press-color: #404bbf;
-  --icon-color: #8e8f99;
-  --transition-dur-funk: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.list {
-  list-style: none;
-  display: flex;
-}
-.link {
-  text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-ol,
-ul {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-img {
-  display: block;
-}
-
-.logo-header {
-  display: block;
-}
-
 body {
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
   background-image: url('../src/images/background2x.jpg');
@@ -49,113 +10,29 @@ body {
   background-repeat: no-repeat;
 }
 
-.page-header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.page-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 1);
-  border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16),
-    0 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.page-navigation {
-  display: flex;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.menu-item {
-  display: block;
-  padding: 24px 0;
-}
-
-.addresses-nav {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
 .container {
   margin: 0 auto;
   width: 1158px;
-  padding: 0 auto;
 }
 
-/* header-logo */
-.logo {
-  color: var(--active-color);
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-  line-height: 1.17;
-  font-weight: 800;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-right: 76px;
+.hero-left {
+  margin-top: 223px;
 }
 
-.logo-dark {
-  color: var(--main-color);
-}
-
-.logo-light {
-  color: var(--light-color);
-}
-
-.menu-item {
-  color: var(--main-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.menu-item:hover,
-.menu-item:focus {
-  color: var(--press-color);
-  transition: color var(--transition-dur-funk);
-}
-
-.addresses {
-  font-style: normal;
-}
-
-.contact {
-  display: block;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--text-color);
-  transition: color var(--transition-dur-funk);
-}
-
-.contact:hover,
-.contact:focus {
-  color: var(--press-color);
+.hero-right {
+  margin-top: 94px;
 }
 
 .hero {
   display: flex;
   justify-content: center;
-  gap: 58px;
+  gap: 115px;
 }
 
 .hero-title {
-  margin-top: 228px;
-  max-width: 555px;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 555px;
   color: #242424;
   font-family: Poppins;
   font-size: 64px;
@@ -171,6 +48,8 @@ body {
   line-height: 1.09;
 }
 .hero-about {
+  margin-top: 0;
+  margin-bottom: 0;
   padding-top: 28px;
   color: #242424;
   font-family: Poppins;
@@ -178,14 +57,40 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 1.3;
-  max-width: 480px;
+  max-width: 478px;
 }
+
+.hero-button {
+  margin-top: 56px;
+  padding-block: 0;
+  padding-inline: 0;
+  cursor: pointer;
+  width: 245px;
+  height: 68px;
+  border-radius: 12px;
+  background-color: #7e8fdd;
+  border: none;
+  color: #fdfdff;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.36px;
+  text-transform: uppercase;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #6e7fcf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .hero-right {
-  margin-top: 112px;
   background: url(./images/elements.png) 100% 100% no-repeat,
     url(./images/Girl.png) 100% 100% no-repeat,
-    url(./images/Rectangle\ 725.png) 100% 100% no-repeat;
-  background-position: top 0 right 0, top 10px right 84px, top 99px right 84px;
+    url(./images/Rectangle725.png) 100% 100% no-repeat;
+  background-position: top 0px right 0px, top 0px right 0px, top 70px right 0px;
   width: 552px;
   height: 672px;
 }
