--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 1158px;
+  width: 1580px;
 }
 
 .hero-left {
@@ -86,11 +86,29 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.fon {
+  position: absolute;
+}
 .hero-right {
-  background: url(./images/elements.png) 100% 100% no-repeat,
-    url(./images/Girl.png) 100% 100% no-repeat,
+  position: relative;
+  background: url(./images/Girl.png) 100% 100% no-repeat,
     url(./images/Rectangle725.png) 100% 100% no-repeat;
-  background-position: top 0px right 0px, top 0px right 0px, top 70px right 0px;
+  background-position: top 10px right 85px, top 50px right 10px;
   width: 552px;
   height: 672px;
+}
+.hero-right-about {
+  position: absolute;
+  top: 625px;
+  right: 170px;
+  width: 219px;
+  color: #242424;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.33;
+  letter-spacing: 0.36px;
+  text-transform: uppercase;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
