--- a/src/styles.css
+++ b/src/styles.css
@@ -12,11 +12,11 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 1580px;
+  width: 1280px;
 }
 
 .hero-left {
-  margin-top: 223px;
+  margin-top: 228px;
 }
 
 .hero-right {
@@ -26,7 +26,7 @@ body {
 .hero {
   display: flex;
   justify-content: center;
-  gap: 115px;
+  gap: 56px;
 }
 
 .hero-title {
@@ -90,10 +90,11 @@ body {
   position: absolute;
 }
 .hero-right {
+  margin-right: -83px;
   position: relative;
   background: url(./images/Girl.png) 100% 100% no-repeat,
     url(./images/Rectangle725.png) 100% 100% no-repeat;
-  background-position: top 10px right 85px, top 50px right 10px;
+  background-position: top 10px right 81px, top 50px left 15px;
   width: 552px;
   height: 672px;
 }
@@ -111,4 +112,10 @@ body {
   text-transform: uppercase;
   margin-block-end: 0;
   margin-block-start: 0;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1158px) {
 }
