--- a/src/styles.css
+++ b/src/styles.css
@@ -86,7 +86,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.fon {
+.background {
   position: absolute;
 }
 .hero-right {
@@ -113,9 +113,38 @@ body {
   margin-block-end: 0;
   margin-block-start: 0;
 }
+
+@media screen and (max-width: 320px) {
+}
+
 @media screen and (min-width: 480px) and (max-width: 767px) {
 }
 @media screen and (min-width: 768px) {
+  .hero-right-background {
+    visibility: hidden;
+  }
+  .hero-right {
+    margin-right: -54px;
+    position: relative;
+    background: url(./images/Girl.png) 100% 100% no-repeat,
+      url(./images/Rectangle725.png) 100% 100% no-repeat,
+      url(./images/elements.png) 100% 100% no-repeat;
+    background-position: top 10px right 81px, top 50px left 15px;
+    width: 552px;
+    height: 672px;
+  }
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1280px) {
+  .hero-right-background {
+    visibility: visible;
+  }
+  .hero-right {
+    margin-right: -83px;
+    position: relative;
+    background: url(./images/Girl.png) 100% 100% no-repeat,
+      url(./images/Rectangle725.png) 100% 100% no-repeat;
+    background-position: top 10px right 81px, top 50px left 15px;
+    width: 552px;
+    height: 672px;
+  }
 }
