--- a/src/styles.css
+++ b/src/styles.css
@@ -12,72 +12,12 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 1280px;
-}
-
-.hero-left {
-  margin-top: 228px;
-}
-
-.hero-right {
-  margin-top: 94px;
+  width: 100%;
 }
 
 .hero {
   display: flex;
   justify-content: center;
-  gap: 56px;
-}
-
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 555px;
-  color: #242424;
-  font-family: Poppins;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.09;
-}
-.hero-cocktails {
-  color: #7e8fdd;
-  font-size: 64px;
-  font-style: italic;
-  font-weight: 400;
-  line-height: 1.09;
-}
-.hero-about {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 28px;
-  color: #242424;
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.3;
-  max-width: 478px;
-}
-
-.hero-button {
-  margin-top: 56px;
-  padding-block: 0;
-  padding-inline: 0;
-  cursor: pointer;
-  width: 245px;
-  height: 68px;
-  border-radius: 12px;
-  background-color: #7e8fdd;
-  border: none;
-  color: #fdfdff;
-  font-family: Poppins;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.33;
-  letter-spacing: 0.36px;
-  text-transform: uppercase;
 }
 
 .hero-button:hover,
@@ -86,65 +26,124 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.background {
-  position: absolute;
-}
-.hero-right {
-  margin-right: -83px;
-  position: relative;
-  background: url(./images/Girl.png) 100% 100% no-repeat,
-    url(./images/Rectangle725.png) 100% 100% no-repeat;
-  background-position: top 10px right 81px, top 50px left 15px;
-  width: 552px;
-  height: 672px;
-}
-.hero-right-about {
-  position: absolute;
-  top: 625px;
-  right: 170px;
-  width: 219px;
-  color: #242424;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.33;
-  letter-spacing: 0.36px;
-  text-transform: uppercase;
-  margin-block-end: 0;
-  margin-block-start: 0;
-}
-
 @media screen and (max-width: 320px) {
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
 }
 @media screen and (min-width: 768px) {
-  .hero-right-background {
-    visibility: hidden;
-  }
-  .hero-right {
-    margin-right: -54px;
-    position: relative;
-    background: url(./images/Girl.png) 100% 100% no-repeat,
-      url(./images/Rectangle725.png) 100% 100% no-repeat,
-      url(./images/elements.png) 100% 100% no-repeat;
-    background-position: top 10px right 81px, top 50px left 15px;
-    width: 552px;
-    height: 672px;
-  }
 }
 @media screen and (min-width: 1280px) {
-  .hero-right-background {
-    visibility: visible;
+  .container {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .hero {
+    display: flex;
+    justify-content: center;
+    gap: 56px;
+  }
+
+  .hero-left {
+    width: 555px;
+    max-height: 414;
+    margin-top: 228px;
+  }
+
+  .hero-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 555px;
+    color: #242424;
+    font-family: Poppins;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.09;
+  }
+  .hero-cocktails {
+    color: #7e8fdd;
+    font-size: 64px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 1.09;
+  }
+  .hero-about {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 28px;
+    color: #242424;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.3;
+    max-width: 478px;
+  }
+
+  .hero-button {
+    margin-top: 56px;
+    padding-block: 0;
+    padding-inline: 0;
+    cursor: pointer;
+    width: 245px;
+    height: 68px;
+    border-radius: 12px;
+    background-color: #7e8fdd;
+    border: none;
+    color: #fdfdff;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.33;
+    letter-spacing: 0.36px;
+    text-transform: uppercase;
   }
   .hero-right {
-    margin-right: -83px;
     position: relative;
-    background: url(./images/Girl.png) 100% 100% no-repeat,
-      url(./images/Rectangle725.png) 100% 100% no-repeat;
-    background-position: top 10px right 81px, top 50px left 15px;
     width: 552px;
     height: 672px;
+    margin-top: 94px;
+  }
+  .background {
+  }
+  .hero-right-background1 {
+    position: absolute;
+    width: 552px;
+    height: 672px;
+    right: -87px;
+    z-index: 1;
+  }
+  .hero-right-background2 {
+    position: relative;
+    width: 530px;
+    height: 626px;
+    right: -100px;
+    bottom: -51px;
+  }
+  .hero-right-background3 {
+    position: absolute;
+    width: 410px;
+    height: 565px;
+    right: -3px;
+    bottom: 97px;
+  }
+
+  .hero-right-about {
+    position: absolute;
+    top: 625px;
+    right: 70px;
+    width: 219px;
+    color: #242424;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.33;
+    letter-spacing: 0.36px;
+    text-transform: uppercase;
+    margin-block-end: 0;
+    margin-block-start: 0;
   }
 }
