--- a/src/styles.css
+++ b/src/styles.css
@@ -14,10 +14,48 @@ body {
   margin: 0 auto;
   width: 100%;
 }
+.hero-right-background1_dark {
+  visibility: hidden;
+}
 
 .hero {
   display: flex;
   justify-content: center;
+}
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #242424;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 400;
+}
+.hero-cocktails {
+  color: #7e8fdd;
+  font-style: italic;
+  font-weight: 400;
+}
+
+.hero-about {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #242424;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.hero-button {
+  padding-block: 0;
+  padding-inline: 0;
+  cursor: pointer;
+  border-radius: 12px;
+  background-color: #7e8fdd;
+  border: none;
+  color: #fdfdff;
+  font-family: Poppins;
+  font-style: normal;
+  text-transform: uppercase;
 }
 
 .hero-button:hover,
@@ -26,29 +64,178 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 320px) {
-}
-
-@media screen and (min-width: 480px) and (max-width: 767px) {
-}
-@media screen and (min-width: 768px) {
-}
-@media screen and (min-width: 1280px) {
-  .container {
-    margin: 0 auto;
-    width: 100%;
+@media screen and (max-width: 767px) {
+  .hero {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 120px;
+  }
+  .hero-left {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 335px;
+    height: auto;
+  }
+  .hero-title {
+    width: 335px;
+    font-size: 32px;
+    line-height: 1.19;
+  }
+  .hero-cocktails {
+    font-size: 32px;
+    line-height: 1.19;
+  }
+  .hero-about {
+    padding-top: 18px;
+    font-size: 14px;
+    line-height: 1.43;
+    max-width: 338px;
+  }
+  .hero-button {
+    margin-top: 36px;
+    width: 178px;
+    height: 48px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.43;
+    letter-spacing: 0.28px;
+  }
+  .background {
+    position: relative;
+  }
+  .hero-right {
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 481px;
   }
 
+  .hero-right-background1,
+  .hero-right-background1_dark {
+    position: absolute;
+    width: 342px;
+    max-height: 481px;
+    right: -180px;
+    bottom: -490px;
+  }
+
+  .hero-right-background2 {
+    position: absolute;
+    width: 380px;
+    height: 490px;
+    right: -190px;
+    bottom: -508px;
+    z-index: 1;
+  }
+  .hero-right-background3 {
+    position: absolute;
+    max-width: 354px;
+    height: 387px;
+    right: -176px;
+    bottom: -405px;
+    z-index: 1;
+  }
+  .hero-right-about {
+    position: absolute;
+    width: 173px;
+    color: #242424;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.43;
+    letter-spacing: 0.28px;
+    text-transform: uppercase;
+    margin-block-end: 0;
+    margin-block-start: 0;
+    top: 437px;
+    right: -80px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-left {
+    width: 371px;
+    max-height: 332px;
+    margin-top: 265px;
+  }
+  .hero-title {
+    width: 384px;
+    font-size: 44px;
+    line-height: 1.09;
+  }
+  .hero-cocktails {
+    font-size: 44px;
+    line-height: 1.09;
+  }
+  .hero-about {
+    padding-top: 24px;
+    font-size: 16px;
+    line-height: 1.5;
+    max-width: 338px;
+  }
+  .hero-button {
+    margin-top: 48px;
+    width: 245px;
+    height: 68px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.33;
+    letter-spacing: 0.36px;
+  }
+  .hero-right {
+    position: relative;
+    margin-right: -54x;
+    margin-left: -42px;
+    width: 427px;
+    height: 593px;
+    margin-top: 135px;
+  }
+  .background {
+    position: static;
+  }
+  .hero-right-background1,
+  .hero-right-background1_dark {
+    position: absolute;
+    width: 427px;
+    height: 593px;
+  }
+
+  .hero-right-background2 {
+    position: absolute;
+    width: 398px;
+    height: 567px;
+    right: 3px;
+    bottom: -5px;
+    z-index: 1;
+  }
+  .hero-right-background3 {
+    position: absolute;
+    width: 333px;
+    height: 451px;
+    right: 35px;
+    bottom: 98px;
+    z-index: 1;
+  }
+
+  .hero-right-about {
+    position: absolute;
+    top: 550px;
+    right: 59px;
+    width: 219px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    text-transform: uppercase;
+  }
+}
+@media screen and (min-width: 1280px) {
   .hero {
-    display: flex;
-    justify-content: center;
     gap: 56px;
   }
 
   .hero-left {
     width: 555px;
-    max-height: 414;
-    margin-top: 228px;
+    max-height: 414px;
+    margin-top: 258px;
   }
 
   .hero-title {
@@ -63,58 +250,41 @@ body {
     line-height: 1.09;
   }
   .hero-cocktails {
-    color: #7e8fdd;
     font-size: 64px;
-    font-style: italic;
-    font-weight: 400;
     line-height: 1.09;
   }
   .hero-about {
-    margin-top: 0;
-    margin-bottom: 0;
     padding-top: 28px;
-    color: #242424;
-    font-family: Poppins;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 1.3;
     max-width: 478px;
   }
 
   .hero-button {
     margin-top: 56px;
-    padding-block: 0;
-    padding-inline: 0;
-    cursor: pointer;
     width: 245px;
     height: 68px;
-    border-radius: 12px;
-    background-color: #7e8fdd;
-    border: none;
-    color: #fdfdff;
-    font-family: Poppins;
     font-size: 18px;
-    font-style: normal;
     font-weight: 600;
     line-height: 1.33;
     letter-spacing: 0.36px;
-    text-transform: uppercase;
   }
   .hero-right {
     position: relative;
     width: 552px;
     height: 672px;
     margin-top: 94px;
+    margin-right: 0px;
+    margin-left: 0px;
   }
-  .background {
-  }
-  .hero-right-background1 {
+
+  .hero-right-background1,
+  .hero-right-background1_dark {
     position: absolute;
     width: 552px;
     height: 672px;
     right: -87px;
-    z-index: 1;
+    z-index: 2;
   }
   .hero-right-background2 {
     position: relative;
@@ -133,17 +303,11 @@ body {
 
   .hero-right-about {
     position: absolute;
-    top: 625px;
+    top: 605px;
     right: 70px;
     width: 219px;
-    color: #242424;
     font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 1.33;
     letter-spacing: 0.36px;
-    text-transform: uppercase;
-    margin-block-end: 0;
-    margin-block-start: 0;
   }
 }
