--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
-body {
+/* body {
   margin-top: 0;
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
-  background-image: url('../src/images/background2x.jpg');
+  background-image: url('./images/background.png');
   width: 100%;
   background-repeat: no-repeat;
 }
@@ -310,4 +310,63 @@ body {
     line-height: 1.33;
     letter-spacing: 0.36px;
   }
+} */
+/* -------- */
+body {
+  width: 1280px;
+  height: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.no_result_container {
+  margin-left: 100px;
+  margin-top: 164px;
+}
+.no_result_title {
+  margin-block-end: 0px;
+  margin-block-start: 0px;
+  color: #242424;
+  font-family: Poppins;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+}
+.no_result_center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
+  padding-bottom: 331px;
+  width: 372px;
+  height: 297px;
+}
+.no_result_img {
+  text-align: center;
+
+  width: 234px;
+  height: 201px;
+}
+.no_result {
+  margin-block-end: 0px;
+  margin-block-start: 0px;
+  padding-top: 40px;
+  color: #242424;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+}
+
+.no_result_fc {
+  color: #9cdfdf;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.17;
 }
