--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
-/* body {
+body {
   margin-top: 0;
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
-  background-image: url('./images/background.png');
+  background-image: url('./images/background2x.jpg');
   width: 100%;
   background-repeat: no-repeat;
 }
@@ -21,6 +21,7 @@
 .hero {
   display: flex;
   justify-content: center;
+  padding-bottom: 300px;
 }
 .hero-title {
   margin-top: 0;
@@ -310,27 +311,22 @@
     line-height: 1.33;
     letter-spacing: 0.36px;
   }
-} */
+}
+
 /* -------- */
-body {
-  width: 1280px;
-  height: 940px;
+
+.no_result_container {
   margin-left: auto;
   margin-right: auto;
 }
-.no_result_container {
-  margin-left: 100px;
-  margin-top: 164px;
-}
-.no_result_title {
+
+no_result_title {
   margin-block-end: 0px;
   margin-block-start: 0px;
   color: #242424;
   font-family: Poppins;
-  font-size: 40px;
   font-style: normal;
   font-weight: 500;
-  line-height: 1.2;
 }
 .no_result_center {
   display: flex;
@@ -338,35 +334,107 @@ body {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 100px;
-  padding-bottom: 331px;
-  width: 372px;
-  height: 297px;
 }
-.no_result_img {
-  text-align: center;
 
-  width: 234px;
-  height: 201px;
+.no_result_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
-.no_result {
+.no_result_text {
   margin-block-end: 0px;
   margin-block-start: 0px;
   padding-top: 40px;
   color: #242424;
   text-align: center;
   font-family: Poppins;
-  font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.17;
 }
-
 .no_result_fc {
   color: #9cdfdf;
   font-family: Poppins;
-  font-size: 24px;
   font-style: italic;
   font-weight: 400;
-  line-height: 1.17;
+}
+
+@media screen and (max-width: 767px) {
+  .no_result_container {
+    width: 375px;
+    height: 812px;
+    padding-left: 20px;
+    padding-top: 132px;
+  }
+  .no_result_title {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+  .no_result_center {
+    padding-top: 138px;
+    padding-bottom: 392px;
+    width: 244px;
+    height: 190px;
+  }
+  .no_result_img {
+    width: 142px;
+    height: 122px;
+  }
+  .no_result_text,
+  .no_result_fc {
+    font-size: 18px;
+    line-height: 1.33;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .no_result_container {
+    width: 768px;
+    height: 932px;
+    padding-left: 32px;
+    padding-top: 164px;
+  }
+
+  .no_result_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+  .no_result_center {
+    padding-top: 100px;
+    padding-bottom: 323px;
+    width: 372px;
+    height: 297px;
+  }
+  .no_result_img {
+    width: 234px;
+    height: 201px;
+  }
+  .no_result_text,
+  .no_result_fc {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .no_result_container {
+    width: 1280px;
+    height: 940px;
+    padding-left: 100px;
+    padding-top: 164px;
+  }
+  .no_result_title {
+    font-size: 40px;
+    line-height: 1.2;
+  }
+  .no_result_center {
+    padding-top: 100px;
+    padding-bottom: 331px;
+    width: 372px;
+    height: 297px;
+  }
+  .no_result_img {
+    width: 234px;
+    height: 201px;
+  }
 }
